--- a/styles/style.css
+++ b/styles/style.css
@@ -48,24 +48,28 @@
     flex-direction: column;
     align-items: center;
 }
-
+/* When you dont put a width the container adjust to the size of the text */
 .indexheader__titlecontainer{
     background-color: black;
-    margin-top: 20px;
-    width: 60%;
+    margin-top: 10px;
+    white-space: nowrap;
+    
+    height: 30%;
+    display: flex;
 }
 
 .indexheader__title{
     color:#F0E7E4;
     font-size: 60px;
     text-align: center;
+    
 }
 
 .indexheader__textcontainer{
     margin-top: 20px;
     display: flex;
     height: 50%;
-    width: 60%;
+    width: 70%;
     background-color: #F0E7E4;
     flex-direction: column;
     align-items: center;
@@ -77,6 +81,119 @@
     font-size: 20px;
     color: black;
     
+    
 }
 
+/* ---------------------CARDS---------------------- */
+.sectioncontainer{
+    background-color: antiquewhite;
+    
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    
+}
 
+.card-container{
+    margin-top: 20px;
+    width: 300px;
+    height: 300px;
+    margin-left: 20px;
+    display: flex;
+    justify-content: center;
+    
+    
+}
+
+.card{
+    width: 100%;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    border-left: 5px solid black;
+    
+    
+}
+
+.card--dontborder{
+    width: 100%;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    
+
+}
+.card:hover, .card--dontborder:hover{
+    border: 3px solid black;
+}
+.card__imagencontainer{
+    width: 90%;
+    height: 70%;
+    display: flex;
+    justify-content: center;
+}
+
+.card__img{
+    width: 100%;
+    height: 100%;
+    
+}
+
+.card__letters{
+    
+    display: flex;
+    height: 60px;
+    margin-top: 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+}
+
+.card__titlec{
+     
+}
+.card__paragraphc{
+    display: flex;
+    justify-content: flex-start;
+}
+.card__paragraph{
+    margin-top: 5px;
+    
+    width: 200px;
+    
+    font-size: 15px;
+}
+
+/* -------------------Footer----------------------- */
+
+.footer{
+    background-color:#D5120F;
+    height: 100px;
+
+    
+    
+}
+
+.footer__textc{
+    height: 50px;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+   
+    
+}
+
+.footer__iconc{
+    display: flex;
+    height: 50%;
+    
+    justify-content: flex-start;
+}
+
+.footer__img{
+    height: 40px;
+    margin-left: 300px;
+}
